# clips_core

./: CMakeLists.txt  LICNESE.md  README.md
core/: CMakeLists.txt
