cmake_minimum_required(VERSION 3.2)
project(clips_core)

include (GenerateExportHeader)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set( CLIPS_SOURCE_FILES
    agenda.c
    agenda.h
    analysis.c
    analysis.h
    argacces.c
    argacces.h
    bload.c
    bload.h
    bmathfun.c
    bmathfun.h
    bsave.c
    bsave.h
    classcom.c
    classcom.h
    classexm.c
    classexm.h
    classfun.c
    classfun.h
    classinf.c
    classinf.h
    classini.c
    classini.h
    classpsr.c
    classpsr.h
    clips.h
    clsltpsr.c
    clsltpsr.h
    commline.c
    commline.h
    conscomp.c
    conscomp.h
    constant.h
    constrct.c
    constrct.h
    constrnt.c
    constrnt.h
    crstrtgy.c
    crstrtgy.h
    cstrcbin.c
    cstrcbin.h
    cstrccmp.h
    cstrccom.c
    cstrccom.h
    cstrcpsr.c
    cstrcpsr.h
    cstrnbin.c
    cstrnbin.h
    cstrnchk.c
    cstrnchk.h
    cstrncmp.c
    cstrncmp.h
    cstrnops.c
    cstrnops.h
    cstrnpsr.c
    cstrnpsr.h
    cstrnutl.c
    cstrnutl.h
    default.c
    default.h
    defins.c
    defins.h
    developr.c
    developr.h
    dffctbin.c
    dffctbin.h
    dffctbsc.c
    dffctbsc.h
    dffctcmp.c
    dffctcmp.h
    dffctdef.c
    dffctdef.h
    dffctpsr.c
    dffctpsr.h
    dffnxbin.c
    dffnxbin.h
    dffnxcmp.c
    dffnxcmp.h
    dffnxexe.c
    dffnxexe.h
    dffnxfun.c
    dffnxfun.h
    dffnxpsr.c
    dffnxpsr.h
    dfinsbin.c
    dfinsbin.h
    dfinscmp.c
    dfinscmp.h
    drive.c
    drive.h
    emathfun.c
    emathfun.h
    engine.c
    engine.h
    envrnmnt.c
    envrnmnt.h
    evaluatn.c
    evaluatn.h
    expressn.c
    expressn.h
    exprnbin.c
    exprnbin.h
    exprnops.c
    exprnops.h
    exprnpsr.c
    exprnpsr.h
    extnfunc.c
    extnfunc.h
    factbin.c
    factbin.h
    factbld.c
    factbld.h
    factcmp.c
    factcmp.h
    factcom.c
    factcom.h
    factfun.c
    factfun.h
    factgen.c
    factgen.h
    facthsh.c
    facthsh.h
    factlhs.c
    factlhs.h
    factmch.c
    factmch.h
    factmngr.c
    factmngr.h
    factprt.c
    factprt.h
    factqpsr.c
    factqpsr.h
    factqury.c
    factqury.h
    factrete.c
    factrete.h
    factrhs.c
    factrhs.h
    filecom.c
    filecom.h
    filertr.c
    filertr.h
    generate.c
    generate.h
    genrcbin.c
    genrcbin.h
    genrccmp.c
    genrccmp.h
    genrccom.c
    genrccom.h
    genrcexe.c
    genrcexe.h
    genrcfun.c
    genrcfun.h
    genrcpsr.c
    genrcpsr.h
    globlbin.c
    globlbin.h
    globlbsc.c
    globlbsc.h
    globlcmp.c
    globlcmp.h
    globlcom.c
    globlcom.h
    globldef.c
    globldef.h
    globlpsr.c
    globlpsr.h
    immthpsr.c
    immthpsr.h
    incrrset.c
    incrrset.h
    inherpsr.c
    inherpsr.h
    inscom.c
    inscom.h
    insfile.c
    insfile.h
    insfun.c
    insfun.h
    insmngr.c
    insmngr.h
    insmoddp.c
    insmoddp.h
    insmult.c
    insmult.h
    inspsr.c
    inspsr.h
    insquery.c
    insquery.h
    insqypsr.c
    insqypsr.h
    iofun.c
    iofun.h
    lgcldpnd.c
    lgcldpnd.h
    match.h
    memalloc.c
    memalloc.h
    miscfun.c
    miscfun.h
    modulbin.c
    modulbin.h
    modulbsc.c
    modulbsc.h
    modulcmp.c
    modulcmp.h
    moduldef.c
    moduldef.h
    modulpsr.c
    modulpsr.h
    modulutl.c
    modulutl.h
    msgcom.c
    msgcom.h
    msgfun.c
    msgfun.h
    msgpass.c
    msgpass.h
    msgpsr.c
    msgpsr.h
    multifld.c
    multifld.h
    multifun.c
    multifun.h
    network.h
    objbin.c
    objbin.h
    objcmp.c
    objcmp.h
    object.h
    objrtbin.c
    objrtbin.h
    objrtbld.c
    objrtbld.h
    objrtcmp.c
    objrtcmp.h
    objrtfnx.c
    objrtfnx.h
    objrtgen.c
    objrtgen.h
    objrtmch.c
    objrtmch.h
    parsefun.c
    parsefun.h
    pattern.c
    pattern.h
    pprint.c
    pprint.h
    prccode.c
    prccode.h
    prcdrfun.c
    prcdrfun.h
    prcdrpsr.c
    prcdrpsr.h
    prdctfun.c
    prdctfun.h
    prntutil.c
    prntutil.h
    proflfun.c
    proflfun.h
    reorder.c
    reorder.h
    reteutil.c
    reteutil.h
    retract.c
    retract.h
    router.c
    router.h
    rulebin.c
    rulebin.h
    rulebld.c
    rulebld.h
    rulebsc.c
    rulebsc.h
    rulecmp.c
    rulecmp.h
    rulecom.c
    rulecom.h
    rulecstr.c
    rulecstr.h
    ruledef.c
    ruledef.h
    ruledlt.c
    ruledlt.h
    rulelhs.c
    rulelhs.h
    rulepsr.c
    rulepsr.h
    scanner.c
    scanner.h
    setup.h
    sortfun.c
    sortfun.h
    strngfun.c
    strngfun.h
    strngrtr.c
    strngrtr.h
    symblbin.c
    symblbin.h
    symblcmp.c
    symblcmp.h
    symbol.c
    symbol.h
    sysdep.c
    sysdep.h
    textpro.c
    textpro.h
    tmpltbin.c
    tmpltbin.h
    tmpltbsc.c
    tmpltbsc.h
    tmpltcmp.c
    tmpltcmp.h
    tmpltdef.c
    tmpltdef.h
    tmpltfun.c
    tmpltfun.h
    tmpltlhs.c
    tmpltlhs.h
    tmpltpsr.c
    tmpltpsr.h
    tmpltrhs.c
    tmpltrhs.h
    tmpltutl.c
    tmpltutl.h
    userdata.c
    userdata.h
    userfunctions.c
    usrsetup.h
    utility.c
    utility.h
    watch.c
    watch.h )

set(LIB_TYPE SHARED)

set( CLIPS_MAIN
     main.c )

add_executable( clips-bin
    ${CLIPS_MAIN} )

set_target_properties( clips-bin
  PROPERTIES OUTPUT_NAME clips  )

add_library( clips SHARED
    ${CLIPS_SOURCE_FILES} )

#
#add_library( sclips SHARED
#    ${CLIPS_SOURCE_FILES} )

target_link_libraries( clips-bin clips )

generate_export_header(clips)


